# WP1-System

./: .gitignore
Simulation/ROS_Simulation/: wrench_log.csv
Simulation/ROS_Simulation/src/quad_motor_plugin/: CMakeLists.txt  package.xml
Simulation/ROS_Simulation/src/quad_motor_plugin/include/quad_motor_plugin/: QuadMotorPlugin.hh
Simulation/ROS_Simulation/src/quad_motor_plugin/src/: QuadMotorPlugin.cc
Simulation/ROS_Simulation/src/quad_wrench_control/: package.xml  setup.py
Simulation/ROS_Simulation/src/quad_wrench_control/launch/: hover_sim.launch.py
Simulation/ROS_Simulation/src/quad_wrench_control/quad_wrench_control/: altitude_controller_node.py  hover_test_node.py  pose_reader_node.py  wrench_logger_node.py
Simulation/ROS_Simulation/src/simple_uav_controller/: package.xml  setup.py
Simulation/ROS_Simulation/src/simple_uav_controller/launch/: altitude_control.launch.py
Simulation/ROS_Simulation/src/simple_uav_controller/simple_uav_controller/: altitude_controller.py
Simulation/gazebo_models/simple_quadrotor/: model.config  model.sdf
Simulation/gazebo_worlds/: simple_quad_world.sdf
Simulation/src/quad_wrench_control/: setup.cfg
Simulation/src/quad_wrench_control/quad_wrench_control/: constant_force_node.py  imu_reader_node.py
Simulation/src/simple_uav_controller/: setup.cfg
